# Projet_5_Openclassrooms

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py  schemas.py
database/: connection.py  create_db.py  models_db.py
docs/: model_card.md  schema_UML_BDD.md
models/: model_metadata.json  model_pipeline.joblib
src/: predict.py
tests/: conftest.py  test_api.py  test_connection.py  test_placeholder.py  test_predict.py  test_schemas.py
