[project]
name = "projet-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.139.2",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "catboost>=1.2.10",
    "imbalanced-learn>=0.14.2",
    "ipykernel>=7.3.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "numba>=0.59",
    "pillow>=12.3.0",
    "pip>=26.1.2",
    "pytest>=9.1.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shap>=0.46",
    "xgboost>=3.2.0",
]
